# matrix-synapse-ldap3

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  RELEASING.md  ldap_auth_provider.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  triage_incoming.yml  triage_labelled.yml  zizmor.yml
docs/: how-to-release.md
scripts-dev/: lint.sh
tests/: __init__.py  ldap_server.py  test_ad.py  test_search.py  test_simple.py  test_user_mapping.py
