[metadata]
name = matrix-synapse-ldap3
url = https://github.com/matrix-org/matrix-synapse-ldap3
version = attr: ldap_auth_provider.__version__
description = An LDAP3 auth provider for Synapse
long_description = file: README.rst
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    Twisted>=15.1.0
    ldap3>=2.8
    service_identity
py_modules = ldap_auth_provider

[flake8]
max-line-length = 90
#  W503 requires that binary operators be at the end, not start, of lines. Erik doesn't like it.
ignore = W503
