[metadata]
name = matrix-synapse-ldap3
url = https://github.com/matrix-org/matrix-synapse-ldap3
version = attr: ldap_auth_provider.__version__
description = An LDAP3 auth provider for Synapse
long_description = file: README.rst
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    Twisted>=15.1.0
    ldap3>=2.8
    service_identity

py_modules = ldap_auth_provider
python_requires = >= 3.7

[options.extras_require]
dev =
  # for tests
  matrix-synapse
  tox
  twisted
  # for type checking
  mypy == 0.910
  # for linting
  black == 21.9b0
  flake8 == 4.0.1
  isort == 5.9.3

[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501
